2007-12-04  Glenn Morris  <rgm@gnu.org>

	* tramp.el: Require password-cache or password.

2007-11-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-setup-interactive-shell): Still
	some tuning in case of an echoing shell.
	(tramp-send-command): Connection property "remote-echo" is not
	persistent; cache key is the process therefore.

2007-11-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* tramp.el (tramp-terminal-type): Remove duplicated definition.

2007-11-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-reread-directory-timeout): New
	defcustom.
	(tramp-handle-file-name-all-completions): Flush directory contents
	from cache regularly.
	(tramp-set-auto-save-file-modes): Check also for
	`buffer-modified-p'.
	(tramp-open-connection-setup-interactive-shell): Call
	`tramp-cleanup-connection' via funcall.

	* tramp-ftp.el (tramp-ftp-file-name-handler): Temp file is already
	created when copying.

2007-11-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-setup-interactive-shell): Check
	whether the output of "uname -sr" has been changed.

2007-11-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-maybe-open-connection): Use a local copy of
	`process-environment'.

2007-11-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-substitute-in-file-name): Don't expand
	the remote connection identification.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Set also $PS2 and $PS3 when setting $PS1.  Check for shell echoing
	before calling stty.

	* tramp-cache.el (tramp-cache-print)
	(tramp-dump-connection-properties): Fix docstring.
	(tramp-list-connections): Renamed from
	`tramp-cache-list-connections'.

	* tramp-cmds.el (tramp-cleanup-connection): Apply it.

	* tramp-ftp.el (tramp-ftp-file-name-handler): Don't expand the
	remote connection identification when setting connection property.
